--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300);
+@import url(https://fonts.googleapis.com/css?family=Maven+Pro:400,500,700,900);
 
 html{
   width:100%;
@@ -21,9 +22,18 @@ a{
   text-decoration:none;
 }
 
-#back{
+ul{
+  margin-top: 0;
+}
+
+#top{
 	width:100%;
 	background-color:#242424;
+}
+
+#top2{
+	width:100%;
+	background-color:white;
 }
 
 .wrap{
@@ -37,6 +47,14 @@ a{
   background:#242424;
   height:50px;
 }
+
+.bar2{
+  padding: 0 4%;
+  padding-right: 4.7%;
+  display: block;
+  background: white;
+  height: 75px;
+}
 .logo{
 	float: left;
 	margin: -10px 0;
@@ -44,15 +62,15 @@ a{
 
 .pannel{
   float:right;
+  width: 17.123%;
 }
 
 .search{
     position: relative;
-    float: right;
-    width: 20%;
+    float: left;
+    width: 10%;
     border-right: 1px solid rgb(60, 60, 60);
     padding: 16px 10px;
-    margin: 0;
 }
 
 .search i {
@@ -61,8 +79,8 @@ a{
 
 .login {
 	border-right: 1px solid rgb(60, 60, 60);
-    padding: 12px 16px;
-    float: right;
+	padding: 11px 16px;
+	float: left;
 }
 
 .login ul {
@@ -75,15 +93,79 @@ a{
 	display: inline-block;
 }
 
+.login li a{
+	font-family: 'Maven Pro', sans-serif;
+    font-size: 0.9em;
+    display: block;
+    padding: 5px 8px;
+    color: #777777;
+    text-transform: uppercase;
+    -webkit-text-stroke: 0.5px;
+}
+
+.login span{
+	font-size: 0.9em;
+    color: #777777;
+    text-transform: lowercase;
+    -webkit-text-stroke: 0.5px;
+}
+
+.barmenu{
+	float:left;
+	height: 75px;
+}
+.barmenu ul li{
+    border-left: 1px solid rgb(226, 226, 226);
+}
+
+.favpanier{
+	float: right;
+}
+
+.favpanier ul li{
+	display: inline-block;
+}
+
+.favpanier ul li a{
+	font-family: 'Maven Pro', sans-serif;
+    display: block;
+    line-height: 1.8em;
+    font-size: 1em;
+    padding: 24px 26px;
+    border-left: 1px solid rgb(226, 226, 226);
+}
+
+#shop{
+	border-right: 1px solid rgb(226, 226, 226);
+}
+
+.favpanier ul li a span{
+	background: #57C5A0;
+	color:white;
+    padding: 5px 8px;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -o-border-radius: 5px;
+}
+.favpanier ul li a i{
+	color: grey;
+}
+.greyfav{
+	background: #999999!important;
+	color:white;
+}
+
+
 nav ul {
   list-style: none;
-  background-color: #444;
+  background-color: white;
   text-align: center;
   padding: 0;
   margin: 0;
 }
 nav li {
-  font-family: 'Oswald', sans-serif;
+  font-family: 'Maven Pro', sans-serif;
   font-size: 1.2em;
   line-height: 40px;
   height: 40px;
@@ -92,47 +174,26 @@ nav li {
  
 nav a {
   text-decoration: none;
-  color: #fff;
+  color: #444;
   display: block;
   transition: .3s background-color;
 }
  
-nav a:hover {
-  background-color: #005f5f;
-}
- 
 nav a.active {
   background-color: #fff;
-  color: #444;
+  color: #57c5a0;
   cursor: default;
 }
  
 @media screen and (min-width: 600px) {
   nav li {
-    width: 120px;
+    width: 100px;
     border-bottom: none;
-    height: 50px;
-    line-height: 50px;
-    font-size: 1.4em;
+    height: 75px;
+    line-height: 75px;
   }
- 
-  /* Option 1 - Display Inline */
   nav li {
     display: inline-block;
-    margin-right: -4px;
+    margin-right: 0px;
   }
- 
-  /* Options 2 - Float
-  nav li {
-    float: left;
-  }
-  nav ul {
-    overflow: auto;
-    width: 600px;
-    margin: 0 auto;
-  }
-  nav {
-    background-color: #444;
-  }
-  */
 }
