--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,70 @@ ul{
 	width:95%;
 }
 
+/* slider */
+
+.slider{
+	margin: 0 auto;
+	background: #242424;
+    padding-bottom: 8%;
+	font-family: 'Maven Pro', sans-serif;
+    position: relative;
+    width: 100%;
+    max-width: 1920px;
+    height: 450px;
+}
+
+.slider img{
+	max-width:100%;
+}
+
+.slider div{
+	font-family: 'Maven Pro', sans-serif;
+    padding-top: 15px;
+}
+
+.slider i {
+	color: grey;
+}
+
+.fa-cart-arrow-down {
+	color: #57C5A0!important;
+}
+
+.info{
+	position: absolute;
+    right: 10%;
+    top: 15%;
+}
+
+.infobig{
+	font-family: 'Maven Pro', sans-serif;
+    padding: 10px 0 0;
+    font-size: 2.5em;
+    line-height: 1.2em;
+    color: #242424;
+    text-transform: capitalize;
+}
+
+.infosmall{
+	font-size: 1.2em;
+    line-height: 1.5em;
+}
+.button{
+	background: #57C5A0;
+    color: #ffffff;
+    padding: 25px 12px 10px;
+    display: inline-block;
+    line-height: 1.8em;
+}
+
+.icons{
+	padding: 10px 10px 10px;
+    background: white;
+}
+
+/* fin slider */
+
 .bar{
   padding: 0 4%;		
   display:block;
@@ -50,7 +114,6 @@ ul{
 
 .bar2{
   padding: 0 4%;
-  padding-right: 4.7%;
   display: block;
   background: white;
   height: 75px;
@@ -62,7 +125,7 @@ ul{
 
 .pannel{
   float:right;
-  width: 17.123%;
+  width: 20%;
 }
 
 .search{
@@ -129,7 +192,7 @@ ul{
 .favpanier ul li a{
 	font-family: 'Maven Pro', sans-serif;
     display: block;
-    line-height: 1.8em;
+    line-height: 1.7em;
     font-size: 1em;
     padding: 24px 26px;
     border-left: 1px solid rgb(226, 226, 226);
